@@ -19,6 +19,7 @@ from MDAnalysisTests.datafiles import TRZ, TRZ_psf, PRM, TRJ
 from MDAnalysisTests import module_not_found, tempdir
 from numpy.testing import assert_, assert_array_almost_equal, assert_raises, assert_, dec
 import numpy as np
+import mock
 
 import MDAnalysis as mda
 from MDAnalysis.analysis.hbonds import HydrogenBondAutoCorrel as HBAC
@@ -251,16 +252,15 @@ class TestHydrogenBondAutocorrel(object):
         )
         assert_raises(ValueError, hbond.solve)
 
-    def test_unslicable_traj_VE(self):
-        u = mda.Universe(PRM, TRJ)
-        H = u.atoms[:10]
-        O = u.atoms[10:20]
-        N = u.atoms[20:30]
+    @mock.patch('MDAnalysis.coordinates.TRZ.TRZReader._read_frame')
+    def test_unslicable_traj_VE(self, mock_read):
+        mock_read.side_effect = TypeError
+
         assert_raises(ValueError, HBAC,
-                      u,
-                      hydrogens=H,
-                      acceptors=O,
-                      donors=N,
+                      self.u,
+                      hydrogens=self.H,
+                      acceptors=self.O,
+                      donors=self.N,
                       bond_type='continuous',
                       sample_time=0.06
         )
