@@ -48,6 +48,7 @@ Enhancements
   * Added ability to read MMTF format files (#907 PR #1069)
   * Added coordinates.null.NullWriter, which behaves like a Writer but
     ignores all input; useful for suppressing output.
+  * Added random access support to GMSReader and TRJReader (#1081)
 
 Fixes
   * Removed MDAnalysis.analysis.PDBToBinaryTraj (Issue #1035)
